--- a/ecommerce/templates/landing/storesearch.html
+++ b/ecommerce/templates/landing/storesearch.html
@@ -109,7 +109,7 @@ Homepage
                 {{ form|as_bootstrap  }}
             
                 <!-- {{ user_profileform.as_p }} -->
-                <input type="submit" class = 'btn btn-secondary' name="submit" value="Search">
+                <input type="submit" class = 'btn btn-outline-secondary' name="submit" value="Search">
             </div>
         </form>
         <br>
@@ -148,16 +148,16 @@ Homepage
                     <div class="box-element product">
                         <h6><strong>Product : {{pdt.productname}} - {{pdt.created_at}}</strong></h6>
                         <hr>
-
-                        <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                        <a class="btn btn-outline-success" href="#">View</a>
+            </a>
+                        <a href="{% url 'products:addtocart' pdt.productid %}"><button  class="btn btn-outline-secondary add-btn">Add to Cart</button></a>
+                        <a class="btn btn-outline-success" href="{% url 'products:home' pdt.productid %}">View</a>
                         <h4 style="display: inline-block; float: right"><strong>${{pdt.unit_price}}</strong></h4>
 
                     </div>
                 </div>
                 <br> 
                 <br><br><br><br>
-            </a>
+            
             {% endfor %}
         </div>
 
