--- a/ecommerce/static/css/base.css
+++ b/ecommerce/static/css/base.css
@@ -5,6 +5,11 @@ html, body {
 
 }
 
+#cart-total{
+	text-decoration: none;
+	cursor: pointer;
+	font-weight: bold;
+}
 
 .box-element {
 	box-shadow: hsl(0, 0%, 80%) 0 0 16px;
@@ -19,7 +24,7 @@ html, body {
 
 .thumbnail {
 	width: 100%;
-	height: 250px;
+	height: 400px;
 	-webkit-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
 	-moz-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
 	box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
@@ -82,9 +87,10 @@ html, body {
 
 .related-scroller{
 	width: 100%;
-	height: 500px;
+	height: 850px;
 	overflow-x: auto;
     overflow-y: auto;
+	background-color: #faf9f9;;
 }
 
 .end-logo:hover{
