--- a/ecommerce/templates/base2.html
+++ b/ecommerce/templates/base2.html
@@ -41,7 +41,8 @@
                 <a href="#">
                     <img id="cart-icon" src="{% static 'img/cart.png' %}">
                 </a>
-                <p id="cart-total">0</p>
+                <p id="cart-total" style="background-color: red; ">{{cart_count}}</p>
+                <!--<p id="cart-total">0</p>-->
 
             </div>
         </div>
