cart functionalities over 2

--- a/ecommerce/templates/cart/cart.html
+++ b/ecommerce/templates/cart/cart.html
@@ -190,7 +190,7 @@ Product-Home
                 <hr><br><br><br>
 
                 {% endfor %}
-                <button class="btn btn-primary" style="width: 80%; margin: 0 10%;"> CONTINUE SHOPPING </button><br><br>
+                <a href="{% url 'homepage:home' %}"><button class="btn btn-primary" style="width: 80%; margin: 0 10%;"> CONTINUE SHOPPING </button><br><br></a>
                 <button class="btn btn-success" style="width: 80%; margin: 0 10%;"> PLACE ORDER </button><br>
                 <br>
                 <br>
