added my orders and placing order functionality

--- a/ecommerce/static/css/base.css
+++ b/ecommerce/static/css/base.css
@@ -36,6 +36,10 @@ html, body {
 	margin-left: 15px;
 }
 
+#cart-icon:hover{
+	transform: scale(1.5);
+}
+
 .bodynav:hover {
 	transform: scale(1.1);
 	color: rgb(0, 0, 0);
@@ -95,4 +99,33 @@ html, body {
 
 .end-logo:hover{
 	transform: scale(1.5);
+}
+
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+	border-radius: 10px;
+	padding: 10px;
+}
+
+.dropdown-content a {
+	float: none;
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	text-align: left;
+}
+
+.dropdown-content a:hover {
+	background-color: #485e79;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
 }
