--- a/ecommerce/templates/landing/not_signed_in.html
+++ b/ecommerce/templates/landing/not_signed_in.html
@@ -132,7 +132,7 @@ Homepage
 
                         <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
                         <a class="btn btn-outline-success" href="#">View</a>
-                        <h4 style="display: inline-block; float: right"><strong>${{pdt.unit_price}}</strong></h4>
+                        <h4 style="display: inline-block; float: right"><strong>₹{{pdt.unit_price}}</strong></h4>
 
                     </div>
                 </div>
