--- a/ecommerce/templates/product/producthome.html
+++ b/ecommerce/templates/product/producthome.html
@@ -180,6 +180,13 @@ Product-Home
                 </div>
             <br>
             <hr>
+            <div class="likes">
+                <br>
+                    <a href="#"><h1>Likes : {{like_count}} </h1></a>
+                    
+                <br>
+            </div>
+            <hr>
             <br><br>
                 <h1>DESCRIPTION :</h1>
                 <br>
@@ -202,7 +209,7 @@ Product-Home
         
                                     <a href="#"></a> <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
                                     <a class="btn btn-outline-success" href="#">View</a>
-                                    <h4 style="display: inline-block; float: right"><strong>${{rpdt.unit_price}}</strong></h4>
+                                    <h4 style="display: inline-block; float: right"><strong>₹{{rpdt.unit_price}}</strong></h4>
         
                                 </div>
                             </div>
