--- a/ecommerce/templates/cart/cart.html
+++ b/ecommerce/templates/cart/cart.html
@@ -161,7 +161,7 @@ Product-Home
                     <div class="row">
                         <div class="col-lg-7">
                             <h1 style=" text-align: left; margin-left: 10%; margin-top: 1%; text-transform: uppercase;">{{orderdetailspdt.product.productname}}</h1><br>
-                            <img class="product-display" src="{{ orderdetailspdt.product.picture.url }}" alt="error" style="width:70%; margin: 0% 0% 0% 10%;">
+                            <a href="{% url 'products:home' orderdetailspdt.product.productid %}"><img class="product-display" src="{{ orderdetailspdt.product.picture.url }}" alt="error" style="width:70%; margin: 0% 0% 0% 10%;"></a>
                         </div>
                         <div class="col-lg-5" style="text-align: left; margin: 5% 0% 0% -5%;">
                             
@@ -175,7 +175,7 @@ Product-Home
                             <b>productname :</b> <h1 style="text-transform: capitalize;">{{orderdetailspdt.product.productname}}</h1>
                             <br>
                             <b>Quantity:</b> <h1>{{orderdetailspdt.quantity}}</h1>                            
-                            <b>product price :</b> <h1>{{orderdetailspdt.product.unit_price}}</h1>
+                            <b>product price :</b> <h1>₹{{orderdetailspdt.product.unit_price}}</h1>
                             <b>In stock :</b> <h1>{{orderdetailspdt.product.instock}}</h1>
                             <b>product desc :</b> <h1>{{orderdetailspdt.product.productdescription}}</h1>
                             <br><br>
@@ -220,7 +220,7 @@ Product-Home
         
                                     <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
                                     <a class="btn btn-outline-success" href="#">View</a>
-                                    <h4 style="display: inline-block; float: right"><strong>${{rpdt.unit_price}}</strong></h4>
+                                    <h4 style="display: inline-block; float: right"><strong>₹{{rpdt.unit_price}}</strong></h4>
         
                                 </div>
                             </div>
