--- a/ecommerce/templates/cart/updatecart.html
+++ b/ecommerce/templates/cart/updatecart.html
@@ -172,7 +172,7 @@ Product-Home
         
                                     <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
                                     <a class="btn btn-outline-success" href="#">View</a>
-                                    <h4 style="display: inline-block; float: right"><strong>${{rpdt.unit_price}}</strong></h4>
+                                    <h4 style="display: inline-block; float: right"><strong>₹{{rpdt.unit_price}}</strong></h4>
         
                                 </div>
                             </div>
